refactor: all app build (resumen)

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "programming-work-db": "server=localhost;port=3306;database=programming-work;user=root;password=;"
+    "taller-programacion-db": "server=localhost;port=3306;database=taller-programacion;user=root;password=;"
   }
 }
